# whatsie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/: FUNDING.yml
.github/workflows/: macos-build.yml  release-artifacts.yml  snap.yml  tests.yml  windows-codecs.yml
DOCS/: BUILD_QUICK_REFERENCE.md  CMAKE_MIGRATION.md  WINDOWS_BUILD.md
debian/: changelog  control  rules
debianpkg/: README.md
debianpkg/data/: net.shakaran.whatsie.desktop
debianpkg/debian/: control  copyright  rules
docs/: index.html
packaging/: README.md
packaging/flathub/: net.shakaran.whatly.yml
packaging/flatpak/: net.shakaran.whatly.yml
packaging/rpm/: whatly.spec
snap/: snapcraft.yaml
src/: about.cpp  about.h  appprofile.cpp  appprofile.h  automatictheme.cpp  chattheme.cpp  chattheme.h  chatwallpaper.cpp  chatwallpaper.h  common.cpp  debuglog.cpp  dictionaries.cpp  dictionaries.h  downloadmanagerwidget.cpp  globalshortcut.cpp  globalshortcut.h  hdmedia.cpp  hdmedia.h  lock.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_accounts.cpp  mainwindow_tray.cpp  mainwindow_webengine.cpp  notificationrules.cpp  notificationrules.h  pagebridge.h  performance.cpp  performance.h  portalnotification.cpp  portalnotification.h  privacyblur.cpp  privacyblur.h  quickreply.cpp  quickreply.h  rateapp.cpp  settingsmanager.h  settingswidget.cpp  settingswidget.h  (+13 more)
src/i18n/: ar_SA.ts  de_DE.ts  es_ES.ts  fr_FR.ts  hi_IN.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  tr_TR.ts  zh_CN.ts
tests/: CMakeLists.txt  tst_logic.cpp  tst_ui_assets.cpp
tools/: README.md  coverage.sh  integration.sh  make-cards.py  make-video.py  release-snap.sh  upload-store-screenshots.py
